--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="node_modules/phaser/build/phaser.min.js"></script>
 </head>
 <body>
+asd
 	<script src="scripts/app.js"></script>
+asd
 </body>
 </html>
